# platform.core.api.wifi-direct

./: CMakeLists.txt  capi-network-wifi-direct.pc.in  project.config
include/: wifi-direct-internal.h  wifi-direct.h
packaging/: capi-network-wifi-direct.changes  capi-network-wifi-direct.spec
src/: CMakeLists.txt  wifi-direct-client-proxy.c  wifi-direct-dbus.c
src/include/: wifi-direct-client-proxy.h  wifi-direct-dbus.h  wifi-direct-ipc.h  wifi-direct-log.h
test/: CMakeLists.txt  test-wifi-direct.c
